<resources>
    <string name="app_name">Buff Enough</string>
    <string name="logout">Log Out</string>
    <string name="sp_email" translatable="false">default_email</string>
    <string name="sp_userID" translatable="false">default_id</string>
    <string name="sp_units" translatable="false">default_units</string>
    <string name="mm_profile_settings">Edit Profile</string>
    <string name="ma_no_results">No Results</string>
    <string name="ma_recent_results">Recent Results</string>
    <string name="ma_item_view_results">View Results</string>
    <string name="ma_item_com_results">Community Results</string>
    <string name="failed_login">Log in failed. Please check your connection and try again.</string>
    <string name="connection_failed">Connection failed. Please check your connection and restart the app</string>
    <string name="login_prompt">Please log in with your Gmail account.</string>
    <string name="new_user" translatable="false">newUser</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="percentages">%</string>
    <string name="close">Close</string>
    <string name="pp_username">Username</string>
    <string name="pp_birthday">Year Born</string>
    <string name="pp_et_birthday">Year Born ex. 1992</string>
    <string name="pp_et_weight">Weight (in pounds)</string>
    <string name="pp_tv_weight">Weight</string>
    <string name="pp_tv_skill">Skill Level</string>
    <string name="pp_tv_years">Years Active</string>
    <string name="pp_button_save">Save</string>
    <string name="pp_gender">Gender</string>
    <string name="pp_age_error">Invalid birth year please enter a value after 1900 ex. 1992</string>
    <string name="pp_pounds">Pounds</string>
    <string name="pp_kg">Kg</string>
    <string name="pp_units">Units</string>
    <string name="cr_age">Age</string>
    <string name="pp_missing_values">Please fill out all fields</string>
    <string-array name="skill_level_titles">
        <item>1 Pro</item>
        <item>2 Semi-Pro</item>
        <item>3 Weekend Warrior</item>
        <item>4 Functional Fitness</item>
        <item>5 Beginner</item>
    </string-array>
    <string-array name="gender_titles">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="male">Male</string>
    <string-array name="cr_genders">
        <item>All</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="cr_skill_level_titles">
        <item>All</item>
        <item>1 Pro</item>
        <item>2 Semi-Pro</item>
        <item>3 Weekend Warrior</item>
        <item>4 Functional Fitness</item>
        <item>5 Beginner</item>
    </string-array>
    <string-array name="cr_weights">
        <item>All</item>
        <item>0-60</item>
        <item>61-70</item>
        <item>71-80</item>
        <item>81-90</item>
        <item>91-100</item>
        <item>101-110</item>
        <item>111-120</item>
        <item>121-130</item>
        <item>131-140</item>
        <item>141-150</item>
        <item>151-160</item>
        <item>161-170</item>
        <item>171-180</item>
        <item>181-190</item>
        <item>191-200</item>
        <item>201-210</item>
        <item>211-220</item>
        <item>221-230</item>
        <item>231+</item>
    </string-array>
    <string-array name="cr_ages">
        <item>All</item>
        <item>0-15</item>
        <item>16-20</item>
        <item>21-25</item>
        <item>26-30</item>
        <item>31-40</item>
        <item>41-50</item>
        <item>51-60</item>
        <item>61+</item>
    </string-array>
    <string-array name="cr_active">
        <item>All</item>
        <item>0-3</item>
        <item>4-6</item>
        <item>6-9</item>
        <item>10-20</item>
        <item>21+</item>
    </string-array>
    <string name="cr_personal_best">Your PR</string>
    <string name="cr_percentile">Percentile</string>
    <string name="cr_com_ave">Community Average</string>
    <string name="cr_com_best">Community Best</string>
    <string name="cr_stand_dev">Standard Deviation</string>
    <string name="ar_tv_category">Category</string>
    <string name="ar_tv_activity">Activity</string>
    <string name="ar_tv_header">Add A Result</string>
    <string name="ar_tv_rounds">Sets, Reps and Weight</string>
    <string name="ar_et_rounds">Sets</string>
    <string name="ar_tv_reps">Reps</string>
    <string name="ar_et_weight">Weight</string>
    <string name="ar_tv_time">Time</string>
    <string name="ar_et_hours">Hours</string>
    <string name="ar_et_minutes">Mins</string>
    <string name="ar_et_seconds">Secs</string>
    <string name="ar_check_rx">Rx</string>
    <string name="ar_tv_distance">Swim Distance</string>
    <string name="ar_et_distance">Distance (in meters)</string>
    <string name="ar_tv_notes">Notes</string>
    <string name="ar_toast_notime">Please Enter A Valid Time</string>
    <string name="squat_snatch">Squat Snatch</string>
    <string name="power_snatch">Power Snatch</string>
    <string name="hang_squat_snatch">Hang Squat Snatch</string>
    <string name="hang_power_snatch">Hang Power Snatch</string>
    <string name="squat_clean">Squat Clean</string>
    <string name="power_clean">Power Clean</string>
    <string name="hang_squat_clean">Hang Squat Clean</string>
    <string name="hang_power_clean">Hang Power Clean</string>
    <string name="clean_jerk">Clean and Jerk</string>
    <string name="back_squat">Back Squat</string>
    <string name="front_squat">Front Squat</string>
    <string name="overhead_squat">Overhead Squat</string>
    <string name="bench">Bench</string>
    <string name="close_grip_bench">Close Grip Bench</string>
    <string name="skull_crusher">Skull Crusher</string>
    <string name="shoulder_press">Shoulder Press</string>
    <string name="jerk_shoulder_press">Jerk Shoulder Press</string>
    <string name="deadlift">Deadlift</string>
    <string name="curl">Curl</string>
    <string name="rdl">Romanian Deadlift</string>
    <string name="incline_bench">Incline Bench</string>
    <string name="decline_bench">Decline Bench</string>
    <string name="row">Bent Over Row</string>
    <string name="tri_extension">Triceps Extension</string>
    <string name="goblet_squat">Goblet Squat</string>
    <string name="fly">Fly</string>
    <string name="fran">Fran</string>
    <string name="cindy">Cindy</string>
    <string name="diane">Diane</string>
    <string name="grace">Grace</string>
    <string name="elizabeth">Elizabeth</string>
    <string name="isabel">Isabel</string>
    <string name="annie">Annie</string>
    <string name="angie">Angie</string>
    <string name="jackie">Jackie</string>
    <string name="helen">Helen</string>
    <string name="murph">Murph</string>
    <string name="nutts">Nutts</string>
    <string name="dt">DT</string>
    <string name="adam_brown">Adam Brown</string>
    <string name="michael">Michael</string>
    <string name="jack">Jack</string>
    <string name="the_seven">The Seven</string>
    <string name="o12.1">12.1</string>
    <string name="o12.2">12.2</string>
    <string name="o12.3">12.3</string>
    <string name="o12.4">12.4</string>
    <string name="o12.5">12.5</string>
    <string name="o13.1">13.1</string>
    <string name="o13.2">13.2</string>
    <string name="o13.3">13.3</string>
    <string name="o13.4">13.4</string>
    <string name="o13.5">13.5</string>
    <string name="o14.1">14.1</string>
    <string name="o14.2">14.2</string>
    <string name="o14.3">14.3</string>
    <string name="o14.4">14.4</string>
    <string name="o14.5">14.5</string>
    <string name="o15.1">15.1</string>
    <string name="o15.2">14.2</string>
    <string name="o15.3">15.3</string>
    <string name="o15.4">15.4</string>
    <string name="o15.5">15.5</string>
    <string name="o16.1">16.1</string>
    <string name="o16.2">16.2</string>
    <string name="o16.3">16.3</string>
    <string name="o16.4">16.4</string>
    <string name="o16.5">14.5</string>
    <string name="o17.1">17.1</string>
    <string name="o17.2">17.2</string>
    <string name="o17.3">17.3</string>
    <string name="o17.4">17.4</string>
    <string name="o17.5">17.5</string>
    <string name="push_up">Push Up</string>
    <string name="pull_up">Strict Pull Up</string>
    <string name="kipping_pull_up">Kipping Pull Up</string>
    <string name="ctb">Chest to Bar Pull Up</string>
    <string name="strict_bar_muscle_up">Strict Bar Muscle Up</string>
    <string name="kipping_bar_muscle_up">Kipping Bar Muscle Up</string>
    <string name="ring_muscle_up">Ring Muscle Up</string>
    <string name="strict_handstand_push_up">Strict Handstand Push Up</string>
    <string name="kipping_handstand_push_up">Kipping Handstand Push Up</string>
    <string name="strict_dip">Strict Dips</string>
    <string name="kipping_dip">Kipping Dips</string>
    <string name="toes_to_bar">Toes to Bar</string>
    <string name="knees_to_elbow">Knees to Elbow</string>
    <string name="burpees">Burpees</string>
    <string name="double_unders">Double Unders</string>
    <string name="sit_ups">Sit Ups</string>
    <string name="plank">Plank</string>
    <string name="one_hundred_meter">100m</string>
    <string name="two_hundred_meter">200m</string>
    <string name="four_hundred_meter">400m</string>
    <string name="mile">mile</string>
    <string name="five_k">5k</string>
    <string name="ten_k">10k</string>
    <string name="half_marathon">Half Marathon</string>
    <string name="marathon">Marathon</string>
    <string name="freestyle">Freestyle</string>
    <string name="backstroke">Back Stroke</string>
    <string name="breast">Breast Stroke</string>
    <string name="butterfly">Butterfly</string>
    <string name="medley">Medley</string>
</resources>