<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="online.cagocapps.prtracker.AddResult">

    <TextView
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:id="@+id/ar_tv_header"
        android:text="@string/ar_tv_header"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/ar_tv_category"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/ar_tv_category"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/ar_tv_header"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/ar_tv_activity"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/ar_tv_activity"
        android:gravity="center"
        android:enabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/ar_tv_category"
        app:layout_constraintTop_toBottomOf="@+id/ar_tv_category"/>

    <Spinner
        android:id="@+id/ar_spin_categories"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/ar_tv_header"
        app:layout_constraintLeft_toRightOf="@+id/ar_tv_category"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ar_tv_category"/>

    <Spinner
        android:id="@+id/ar_spin_activities"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:enabled="false"
        app:layout_constraintLeft_toRightOf="@id/ar_tv_activity"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ar_tv_activity"
        app:layout_constraintBottom_toBottomOf="@id/ar_tv_activity"/>

    <TextView
        android:id="@+id/ar_tv_rounds"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/ar_tv_rounds"
        android:gravity="center"
        android:enabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/ar_tv_activity"
        app:layout_constraintTop_toBottomOf="@id/ar_tv_activity" />

    <EditText
        android:id="@+id/ar_et_rounds"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:enabled="false"
        android:hint="@string/ar_et_rounds"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/ar_tv_rounds"
        app:layout_constraintLeft_toRightOf="@id/ar_tv_rounds"
        app:layout_constraintTop_toBottomOf="@id/ar_tv_activity" />

    <EditText
        android:id="@+id/ar_et_reps"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:text="@string/ar_tv_reps"
        android:enabled="false"
        app:layout_constraintLeft_toLeftOf="@id/ar_et_minutes"
        app:layout_constraintTop_toBottomOf="@id/ar_tv_activity"
        app:layout_constraintBottom_toBottomOf="@id/ar_tv_rounds"
        app:layout_constraintRight_toRightOf="@id/ar_et_minutes"/>
    <EditText
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:id="@+id/ar_et_weight"
        android:hint="@string/ar_et_weight"
        android:inputType="numberDecimal"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/ar_tv_activity"
        app:layout_constraintBottom_toBottomOf="@id/ar_tv_rounds"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:id="@+id/ar_tv_time"
        android:text="@string/ar_tv_time"
        android:gravity="center"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/ar_et_reps"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/ar_tv_category"/>
    <EditText
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:id="@+id/ar_et_hours"
        android:hint="@string/ar_et_hours"
        android:inputType="number"
        android:enabled="false"
        app:layout_constraintLeft_toRightOf="@id/ar_tv_time"
        app:layout_constraintTop_toTopOf="@id/ar_tv_time"
        app:layout_constraintBottom_toBottomOf="@id/ar_tv_time"/>
    <EditText
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:id="@+id/ar_et_minutes"
        android:hint="@string/ar_et_minutes"
        android:inputType="number"
        android:enabled="false"
        app:layout_constraintTop_toTopOf="@id/ar_tv_time"
        app:layout_constraintBottom_toBottomOf="@id/ar_tv_time"
        app:layout_constraintLeft_toRightOf="@id/ar_et_hours"
        app:layout_constraintRight_toLeftOf="@+id/ar_et_secs"/>
    <EditText
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:id="@+id/ar_et_secs"
        android:hint="@string/ar_et_seconds"
        android:inputType="number"
        android:enabled="false"
        app:layout_constraintTop_toTopOf="@id/ar_tv_time"
        app:layout_constraintBottom_toBottomOf="@id/ar_tv_time"
        app:layout_constraintRight_toRightOf="parent"/>

    <CheckBox
        android:id="@+id/ar_check_rx"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:text="@string/ar_check_rx"
        app:layout_constraintTop_toBottomOf="@+id/ar_tv_time"
        app:layout_constraintRight_toRightOf="parent"
        android:enabled="false"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:id="@+id/ar_tv_distance"
        android:text="@string/ar_tv_distance"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ar_check_rx"
        app:layout_constraintRight_toRightOf="@id/ar_tv_activity"/>
    <Spinner
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/ar_spin_distance"
        app:layout_constraintLeft_toRightOf="@id/ar_tv_distance"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ar_check_rx"
        app:layout_constraintBottom_toBottomOf="@id/ar_tv_distance"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:id="@+id/ar_tv_notes"
        android:text="@string/ar_tv_notes"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/ar_tv_distance"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/ar_et_notes"
        android:inputType="textMultiLine"
        android:gravity="top|left"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ar_tv_notes"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/ar_tv_notes"/>


</android.support.constraint.ConstraintLayout>
